Add favicon, add resume, update body.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <title>Andrey Kaipov</title>
 
+    <link rel="icon" href="attachments/face-flipped.png"/>
     <link rel="stylesheet" href="styles/small-skeleton.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -19,7 +20,7 @@
             <div class="eight columns">
                 <div class="header">
                     <h1 id="my-name">Andrey Kaipov</h1>
-                    <img id="my-face" src="images/face2.png"></img>
+                    <img id="my-face" src="attachments/face.png"></img>
                     <hr id="top-divider">
                 </div>
                 <div class="content">
@@ -29,12 +30,15 @@
                         graduating from <a href="http://fiu.edu/">FIU</a> in December 2016.
                     </p>
                     <p>
-                        During this 2016 summer, I'll be working as a web engineer intern at Best Buy up
-                        in Minnesota as part of their digital engineering team.
+                        Right now I'm learning <i>AWK</i> because it's cooler than you think!
                     </p>
                     <p>
-                        If you want to, check out my projects on <a href="https://github.com/andreykaipov/">GitHub</a>,
-                        or connect with me on <a href="https://www.linkedin.com/in/andrey-kaipov-66699a105">LinkedIn</a>.
+                        If you want to - take a look at my <a href="attachments/andrey-kaipov-resume.pdf">resume</a>,
+                        connect with me on <a href="https://www.linkedin.com/in/andrey-kaipov-66699a105">LinkedIn</a>,
+                        or check out my old projects on <a href="https://github.com/andreykaipov/">GitHub</a>.
+                    </p>
+                    <p>
+                        Maybe I should start a blog...
                     </p>
                 </div>
                 <div class="footer">
