--- a/index.html
+++ b/index.html
@@ -30,15 +30,13 @@
                         graduating from <a href="http://fiu.edu/">FIU</a> in December 2016.
                     </p>
                     <p>
-                        Right now I'm learning <i>AWK</i> because it's cooler than you think!
-                    </p>
-                    <p>
                         If you want to - take a look at my <a href="attachments/andrey-kaipov-resume.pdf">resume</a>,
                         connect with me on <a href="https://www.linkedin.com/in/andrey-kaipov-66699a105">LinkedIn</a>,
                         or check out my old projects on <a href="https://github.com/andreykaipov/">GitHub</a>.
                     </p>
                     <p>
-                        Maybe I should start a blog...
+                        People have told me this website is too simple, but what's wrong with that?
+                        <span style="font-family:verdana;font-size:14px">:-)</span>
                     </p>
                 </div>
                 <div class="footer">
