--- a/index.html
+++ b/index.html
@@ -1,63 +1,76 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <title>Andrey Kaipov</title>
+  <title>Andrey Kaipov</title>
 
-    <link rel="icon" href="attachments/face-flipped.png"/>
-    <link rel="stylesheet" href="styles/small-skeleton.css">
-    <link rel="stylesheet" href="styles/style.css">
+  <link rel="icon" href="attachments/face-flipped.png" />
+  <link rel="stylesheet" href="styles/small-skeleton.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+    crossorigin="anonymous">
 </head>
+
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="two columns">
-                <br>
-            </div>
-            <div class="eight columns">
-                <div class="header">
-                    <h1 id="my-name">Andrey Kaipov</h1>
-                    <img id="my-face" src="attachments/face.png"></img>
-                    <hr id="top-divider">
-                </div>
-                <div class="content">
-                    <h5 id="hello">Hello!</h5>
-                    <p>
-                        I'm Andrey, and I'm currently a math student with a concentration in computer science,
-                        graduating from <a href="http://fiu.edu/">FIU</a> in December 2016.
-                    </p>
-                    <p>
-                        If you want to - take a look at my <a href="attachments/andrey-kaipov-resume.pdf">resume</a>,
-                        connect with me on <a href="https://www.linkedin.com/in/andrey-kaipov-66699a105">LinkedIn</a>,
-                        or check out my old projects on <a href="https://github.com/andreykaipov/">GitHub</a>.
-                    </p>
-                    <p>
-                        People have told me this website is too simple, but what's wrong with that?
-                        <span style="font-family:verdana;font-size:14px">:-)</span>
-                    </p>
-                </div>
-                <div class="footer">
-                    <hr>
-                </div>
-            </div>
-            <div class="two columns">
-                <br>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="one column">
+        <br>
+      </div>
+      <div class="ten columns">
+        <div class="page-wrapper">
+          <div class="header">
+            <h1 id="my-name">Andrey Kaipov</h1>
+            <img id="my-face" src="attachments/face.png"></img>
+            <hr id="top-divider">
+          </div>
+          <div class="content">
+            <h5 id="hello">Hello!</h5>
+            <p>
+              I'm Andrey, and I'm currently working as an intern at <a href="http://www.ultimatesoftware.com/">Ultimate Software</a>.
+              Right now I work with a primarily MEAN stack.
+            </p>
+            <p>
+              Here are my links if you'd like to reach me!
+              <ul class='fa-ul'>
+                <li><i class="fa-li fa fa-file-text"></i> My <a href="attachments/andrey-kaipov-resume.pdf">resume</a>
+                  for contact details and a quick summary.</li>
+                <li><i class="fa-li fa fa-linkedin-square"></i> Alternatively, the obligatory
+                  <a href="https://www.linkedin.com/in/andrey-kaipov-66699a105">LinkedIn</a>.</li>
+                <li><i class="fa-li fa fa-github-alt"></i> My <a href="https://github.com/andreykaipov/">GitHub</a>
+                  for projects and open-source contributions.</li>
+              </ul>
+            </p>
+            <p>
+              People have told me this website is too simple, but what's wrong with that? :-)
+            </p>
+          </div>
+          <div class="footer">
+            <hr>
+          </div>
         </div>
+      </div>
+      <div class="one column">
+        <br>
+      </div>
     </div>
+  </div>
 
-    <!--GOOGLE ANALYTICS-->
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-70865218-1', 'auto');
-        ga('send', 'pageview');
-    </script>
+  <!--GOOGLE ANALYTICS-->
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'http://www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-70865218-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </body>
-</html>
 
+</html>
