--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
           <div class="content">
             <h5 id="hello">Hello!</h5>
             <p>
-              I'm Andrey, and I'm currently working as an intern at <a href="http://www.ultimatesoftware.com/">Ultimate Software</a>.
-              Right now I work with a primarily MEAN stack.
+              I'm Andrey, and I currently work at <a href="http://www.ultimatesoftware.com/">Ultimate Software</a> as an intern.
+              My experience is mainly in full-stack web development and internal tools, but I've recently been interested in
+              automating operations work.
             </p>
             <p>
               Here are my links if you'd like to reach me!
