--- a/index.html
+++ b/index.html
@@ -31,23 +31,33 @@
           <div class="content">
             <h5 id="hello">Hello!</h5>
             <p>
-              I'm Andrey, and I currently work at <a href="http://www.ultimatesoftware.com/">Ultimate Software</a> as an intern.
-              My experience is mainly in full-stack web development and internal tools, but I've recently been interested in
-              automating operations work.
+              I'm Andrey, and I currently work at <a href="http://www.ultimatesoftware.com/">Ultimate Software</a>.
+              Before that, I worked at <a href="https://www.bestbuy.com">Best Buy</a>. Both are awesome places to work.
+            </p>
+            <p>
+              I'm comfortable developing full-stack applications with the MEAN stack and the Spring framework.
+              Further, I'm interested in operations work - specifically how teams can improve software development
+              processes with better operations.
             </p>
             <p>
               Here are my links if you'd like to reach me!
               <ul class='fa-ul'>
                 <li><i class="fa-li fa fa-file-text"></i> My <a href="attachments/andrey-kaipov-resume.pdf">resume</a>
                   for contact details and a quick summary.</li>
-                <li><i class="fa-li fa fa-linkedin-square"></i> Alternatively, the obligatory
-                  <a href="https://www.linkedin.com/in/andrey-kaipov-66699a105">LinkedIn</a>.</li>
-                <li><i class="fa-li fa fa-github-alt"></i> My <a href="https://github.com/andreykaipov/">GitHub</a>
+                <li><i class="fa-li fa fa-linkedin-square"></i> My <a href="https://linkedin.com/in/andrey-kaipov">LinkedIn</a>
+                  for networking and stuff I guess.</li>
+                <li><i class="fa-li fa fa-github-alt"></i> My <a href="https://github.com/andreykaipov">GitHub</a>
                   for projects and open-source contributions.</li>
+                <li><i class="fa-li fa fa-twitter-square"></i> My <a href="https://twitter.com/andreykaipov">Twitter</a>
+                  that I should probably start using.</li>
               </ul>
+            </ul>
             </p>
             <p>
-              People have told me this website is too simple, but what's wrong with that? :-)
+              Maybe I'll turn this website into a blog. Who knows?
+            </p>
+            <p>
+              Thanks.
             </p>
           </div>
           <div class="footer">
