--- a/index.html
+++ b/index.html
@@ -31,18 +31,14 @@
           <div class="content">
             <h5 id="hello">Hello!</h5>
             <p>
-              I'm Andrey, and I currently work at <a href="http://www.ultimatesoftware.com/">Ultimate Software</a>.
-              Before that, I worked at <a href="https://www.bestbuy.com">Best Buy</a>. Both are awesome places to work.
-            </p>
-            <p>
-              I'm comfortable developing full-stack applications with the MEAN stack and the Spring framework.
-              Further, I'm interested in operations work - specifically how teams can improve software development
-              processes with better operations.
+              I'm Andrey, and I currently work at <a href="http://www.ultimatesoftware.com/">Ultimate Software</a> as a
+              software engineer on our cloud engineering & operations team. Before that, I worked at
+              <a href="https://www.bestbuy.com">Best Buy</a>. Both are awesome places to work.
             </p>
             <p>
               Here are my links if you'd like to reach me!
               <ul class='fa-ul'>
-                <li><i class="fa-li fa fa-file-text"></i> My <a href="attachments/andrey-kaipov-resume.pdf">resume</a>
+                <li><i class="fa-li fa fa-file-text"></i> My (out of date) <a href="attachments/andrey-kaipov-resume.pdf">resume</a>
                   for contact details and a quick summary.</li>
                 <li><i class="fa-li fa fa-linkedin-square"></i> My <a href="https://linkedin.com/in/andrey-kaipov">LinkedIn</a>
                   for networking and stuff I guess.</li>
