update links and descriptions

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             <p>
               Here are my links if you'd like to reach me!
               <ul class='fa-ul'>
-                <li><i class="fa-li fa fa-file-text"></i> My (out of date) <a href="attachments/andrey-kaipov-resume.pdf">resume</a>
-                  for contact details and a quick summary.</li>
+                <li><i class="fa-li fa fa-file-text"></i> My <a href="attachments/andrey-kaipov-resume.pdf">resume</a>
+                  for a quick summary.</li>
                 <li><i class="fa-li fa fa-linkedin-square"></i> My <a href="https://linkedin.com/in/andrey-kaipov">LinkedIn</a>
-                  for networking and stuff I guess.</li>
+                  for networking or whatever.</li>
                 <li><i class="fa-li fa fa-github-alt"></i> My <a href="https://github.com/andreykaipov">GitHub</a>
-                  for projects and open-source contributions.</li>
+                  for projects and open-source stuff.</li>
                 <li><i class="fa-li fa fa-twitter-square"></i> My <a href="https://twitter.com/andreykaipov">Twitter</a>
                   that I should probably start using.</li>
               </ul>
