fix dead linkedin link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <ul class='fa-ul'>
                 <li><i class="fa-li fa fa-file-text"></i> My <a href="attachments/andrey-kaipov-resume.pdf">resume</a>
                   for a quick summary.</li>
-                <li><i class="fa-li fa fa-linkedin-square"></i> My <a href="https://linkedin.com/in/andrey-kaipov">LinkedIn</a>
+                <li><i class="fa-li fa fa-linkedin-square"></i> My <a href="https://linkedin.com/in/kaipov">LinkedIn</a>
                   for networking or whatever.</li>
                 <li><i class="fa-li fa fa-github-alt"></i> My <a href="https://github.com/andreykaipov">GitHub</a>
                   for projects and open-source stuff.</li>
