--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>
               Here are my links if you'd like to reach me!
               <ul class='fa-ul'>
-                <li><i class="fa-li fa fa-file-text"></i> My <a href="attachments/andrey-kaipov-resume.pdf">resume</a>
+                <li><i class="fa-li fa fa-file-text"></i> My <a href="resume.pdf">resume</a>
                   for a quick summary.</li>
                 <li><i class="fa-li fa fa-linkedin-square"></i> My <a href="https://linkedin.com/in/kaipov">LinkedIn</a>
                   for networking or whatever.</li>
