--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
           <div class="content">
             <h5 id="hello">Hello!</h5>
             <p>
-              I'm Andrey, and I currently work at <a href="http://www.ultimatesoftware.com/">Ultimate Software</a> as a
-              software engineer on our cloud engineering & operations team. Before that, I worked at
-              <a href="https://www.bestbuy.com">Best Buy</a>. Both are awesome places to work.
+              I'm Andrey, and I like site reliability engineering. I find it really fun working with large
+              distributed systems, and providing common tooling to make my fellow developers' lives easier.
             </p>
             <p>
               Here are my links if you'd like to reach me!
@@ -45,12 +44,12 @@
                 <li><i class="fa-li fa fa-github-alt"></i> My <a href="https://github.com/andreykaipov">GitHub</a>
                   for projects and open-source stuff.</li>
                 <li><i class="fa-li fa fa-twitter-square"></i> My <a href="https://twitter.com/andreykaipov">Twitter</a>
-                  that I should probably start using.</li>
+                  that I don't use as often as I should.</li>
               </ul>
             </ul>
             </p>
             <p>
-              Maybe I'll turn this website into a blog. Who knows?
+              Maybe I'll turn this website into a blog, but I still haven't, so it probably won't happen.
             </p>
             <p>
               Thanks.
