--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h5 id="hello">Hello!</h5>
             <p>
               I'm Andrey, and I like site reliability engineering. I find it really fun working with large
-              distributed systems, and providing common tooling to make my fellow developers' lives easier.
+              distributed systems, and abstracting common tooling to make my fellow developers' lives easier.
             </p>
             <p>
               Here are my links if you'd like to reach me!
